--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   "lint-staged": {
     "src/**/*.{ts,tsx,js,jsx}": [
       "eslint --fix",
-      "prettier --write",
-      "npm run lint"
+      "prettier --write"
     ]
   },
   "dependencies": {
